--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <input type="text">
     <button>A Man Needs A Name</button>
     <h2>Birth Name: </h2>
+    <h3>Update</h3>
     <script src="/rap-names-api/JS/main.js"></script>
 </body>
 </html>
